<resources>
    <string name="app_name">EquityJamii</string>
    <string name="welcome_str">Karibu\nNyumbani</string>
    <string name="title_activity_entre_page">entre_Page</string>
    <string name="profile_icon">Profile</string>
    <string name="menu_icon">Menu</string>
    <string name="social_icon">News</string>
    <string name="people_icon">People</string>
    <string name="peoplePageTitle">Meet your fellow jamaa</string>
    <string name="studyabroad_icon">Scholars</string>
    <string name="scholarsPageTitle">Meet our global scholars</string>
    <string name="donate_icon">Donate</string>
    <string name="growth_icon">Growth</string>
    <string name="growthPageTitle">Find topics that build and interest you</string>
    <string name="bottom_app_bar">bottom_app_bar</string>
    <string name="add_post">Social</string>
    <string name="add_post_Title">Welcome to Jamii social</string>
    <string name="place_holder">Place_holder</string>
    <string name="nav_header_profile">Nav Header Picture</string>
    <string name="loremIpsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet sapien eget dui tincidunt, ac tincidunt mauris tincidunt. Etiam a odio bibendum, blandit odio vitae, rhoncus nulla. Nam luctus tortor vel nibh finibus, eu tempor nunc tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla facilisi. Integer condimentum eros ac tincidunt pellentesque. Etiam gravida, turpis nec pellentesque congue, eros felis vehicula eros, non sagittis turpis tellus nec neque. Vivamus mattis arcu justo, eu sollicitudin velit scelerisque eu. Mauris cursus, velit ac dapibus porttitor, velit elit sodales nunc, vitae euismod justo nisi at mauris. Nunc sit amet odio nec metus consectetur hendrerit.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet euismod purus. Suspendisse potenti. Integer nec aliquet ipsum. Proin eu nisl vitae dui rutrum interdum. Suspendisse potenti. Ut scelerisque, odio ac facilisis feugiat, purus tellus placerat mauris, eget facilisis urna mauris id purus. Phasellus scelerisque odio eu ligula dapibus, vitae feugiat tellus facilisis. Aenean a venenatis lorem. Etiam vehicula, nisi a blandit fringilla, turpis nulla auctor odio, sit amet accumsan ex mi sit amet nulla. Aenean at eros luctus, feugiat lectus eu, tincidunt odio. Mauris semper elit at odio eleifend, at convallis lacus posuere. Suspendisse eu diam dui.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia metus nec elit vulputate, vel ultrices dolor iaculis. Sed et ex in purus dignissim consequat. Nam id arcu eget erat elementum pulvinar. Maecenas id tortor et dui posuere mollis non eu justo. Donec rutrum nunc vel quam suscipit pellentesque. Cras ullamcorper feugiat fringilla. Suspendisse maximus justo ligula, id bibendum mauris ultrices vel. Sed malesuada auctor dui, id aliquet tellus pellentesque quis.</string>
    <string name="userName">Simbiri Ray </string>
    <string name="experience">  Denomination\nCurrent branch working at</string>
    <string name="about_text">About %1$s</string>
    <string name="newsFragLabel">News Page</string>
    <string name="newsFragTitle"> Today\'s top stories</string>
    <string name="growthFragLabel">Growth Page</string>
    <string name="scholarsFragLabel">Scholars Page</string>
    <string name="postFragLabel">Post Page</string>
    <string name="donateFragLabel">Donate Page</string>
    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="night">Dark Mode</string>
    <string name="notification">Notifications On</string>
    <string name="notificationsOff">Notifications Off</string>
    <string name="rate">Rate Us</string>
    <string name="aboutUs">About Us</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="designation">Designation</string>
    <string name="branch">Branch</string>
    <string name="more">More</string>
    <string name="lightMode">Light Mode</string>
    <string name="profandSettings">    Profile and Settings</string>
    <string name="recommended">\tRecommended for you</string>
    <string name="readLater">\tSaved during current session </string>
    <string name="laterDeleted">\tRemoved news from saved session </string>
    <string name="trending">\tTrending</string>
    <string name="latest">\tTop Stories</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="textViewPager">Switch between Profile,  Settings, and About us Pages</string>
    <string name="profileTab">Profile</string>
    <string name="aboutUsTab">About Us</string>
    <string name="settingsTab">Settings</string>
    <string name="communicate">Lets hear from you</string>
    <string name="textTableLayout">This tab has Profile,  Settings, and About Pages</string>
    <string name="proftoSet">Profile To Settings</string>
    <string name="profileAndSet">Profile and Settings</string>
    <string name="newsImages">News Images</string>
    <string name="savenews">Bookmark to read later</string>
    <string name="scrollnews">Scroll down for more news</string>
    <string name="readLaterNews">News you added to read later</string>
    <string name="tabNews">Slide right or  left  to find more news</string>
    <string name="tabPosts">Slide right or  left  to find more posts</string>
    <string name="newsOfficialHeadline">News Headline</string>
    <string name="newsOfficialText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet sapien eget dui tincidunt, ac tincidunt mauris tincidunt. Etiam a odio bibendum, blandit odio vitae, rhoncus nulla. Nam luctus tortor vel nibh finibus, eu tempor nunc tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla facilisi. Integer condimentum eros ac tincidunt pellentesque. Etiam gravida, turpis nec pellentesque congue, eros felis vehicula eros, non sagittis turpis tellus nec neque. Vivamus mattis arcu justo, eu sollicitudin velit scelerisque eu.</string>
    <string name="addTask">Add task</string>
    <string name="description_of_task">Description of Task</string>
    <string name="title_of_task">Title of Task</string>
    <string name="assigned_to">Assigned To</string>
    <string name="done">DONE</string>
    <string name="add_branch_task">Add Branch Task</string>
    <string name="add_personal_task">Add Personal Task</string>
    <string name="task_title">Task Title</string>
    <string name="assigned_to_onyango">Assigned to Onyango</string>
    <string name="description_of_task_in_detail">Description of Task in detail</string>
    <string name="branch_tasks">Branch Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="newsImage">News Preview Image</string>
    <string name="schedule_a_call_with_hr">Schedule a call with HR</string>
    <string name="available_time_slots">Available time slots on selected date</string>
    <string name="load_data">Load Data</string>
    <string name="play_video">Play Video</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="karibu_to_equityjamii">Karibu EquityJamii</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="previous_virtual_events">Previous virtual events</string>
    <string name="on_your_mind">Tell us what\'s on your mind</string>
    <string name="num_likes">%d</string>
    <string name="likes">likes</string>
    <string name="posted_image">Posted Image</string>
    <string name="edit_profile_fab">Edit Profile Info</string>
    <string name="backround_image">Backround image</string>
    <string name="list_of_social_profiles">List of social profiles</string>
    <string name="save_profile_changes">Save changes</string>
    <string name="background_image">Background Image</string>
    <string name="card_edit_profile_photo">Card edit profile photo</string>
    <string name="card_edit_background_photo">Card edit background photo</string>
    <string name="my_workspaces">My workspaces</string>
    <string name="my_jamii">My Jamii activity</string>
</resources>