<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

    <item
        android:id="@+id/profileSettings"
        android:title="@string/profile"
        android:icon="@drawable/profiles"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settingsMenu"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="always" />


        <item
            android:id="@+id/moreMenu"
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:title="@string/more"
            android:visible="true"
            app:showAsAction="always" />

        <item
            android:id="@+id/aboutUs"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/aboutUs"
            android:visible="false" />
        <item
            android:id="@+id/communicate"
            android:icon="@drawable/icons8_commercial"
            android:title="@string/communicate"
            android:visible="false" />


    </group>

</menu>