<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileMenu"
        android:title="@string/profile"
        app:showAsAction="always">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/editProfile"
                    android:icon="@drawable/icons8_edit_profile"
                    android:title="@string/editProfile"
                    android:visible="true"
                    />
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/icons8_login"
                    android:title="@string/login"
                    android:visible="false" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/icons8_logout"
                    android:title="@string/logout"
                    android:visible="true" />

            </group>

        </menu>

    </item>


    <group android:checkableBehavior="single">



        <item
            android:id="@+id/notification"
            android:icon="@drawable/icons8_bell"
            android:title="@string/notification"
            android:visible="false" />
        <item
            android:id="@+id/nightMode"
            android:icon="@drawable/icons8_moon"
            android:title="@string/night"
            android:visible="false" />

    </group>

<!--
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/moreMenu"
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:title="@string/more"
            android:visible="true"
            app:showAsAction="always" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/icons8_share"
            android:title="@string/share"
            android:visible="false" />
        <item
            android:id="@+id/rate"
            android:icon="@drawable/icons8_rateus"
            android:title="@string/rate"
            android:visible="false" />

    </group>-->


</menu>

