<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/karbBackgrndtint"
    android:orientation="vertical"
    app:cardCornerRadius="1dp"
    tools:context=".ui.AddTaskDialogFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/karbBackgrndtint">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:hint="@string/title_of_task"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="@style/titleTab"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/description_of_task"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="@style/titleTab"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

        <EditText
            android:id="@+id/editTextAssignedTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/assigned_to"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="@style/titleTab"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        <Button
            android:id="@+id/branchButtonDialogTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/add_branch_task"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAssignedTo"

            />

        <Button
            android:id="@+id/personalButtonDialogTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/add_personal_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAssignedTo"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
