<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_activity.workspace_page.AddTaskDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/dragCard"
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragCard">

        <!-- Title Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            style="@style/FirebaseUI.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/lighterMaroon"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_of_task"
                android:inputType="text"
                android:textAppearance="@style/titleTab"
                android:textColorHighlight="@color/lighterMaroon"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            style="@style/FirebaseUI.TextInputLayout"
            android:layout_width="0dp"
            app:hintTextColor="@color/lighterMaroon"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_of_task"
                android:inputType="text"
                android:textAppearance="@style/titleTab"
                android:textColorHighlight="@color/lighterMaroon"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Assigned To Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/assignedToLayout"
            style="@style/FirebaseUI.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:hintTextColor="@color/lighterMaroon"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/assigned_to"
                android:inputType="text"
                android:textAppearance="@style/titleTab"
                android:textColorHighlight="@color/lighterMaroon"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/branchButtonDialogTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/karbBackgrndtint"
            android:text="@string/add_branch_task"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assignedToLayout"

            />

        <Button
            android:id="@+id/personalButtonDialogTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/karbBackgrndtint"
            android:text="@string/add_personal_task"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assignedToLayout"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>